examples/good/apply.alef
(* HO function apply. *)

apply : (unit -> unit<μ>) -> unit<μ>
apply = fun f -> f ();;

g : unit -> unit<Print | μ>
g = fun _ -> Print(1);;

main : unit<Print | μ>
main = apply (fun _ -> Print(1))